--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
     <meta name="description" content="'React' YouTube/Unsplash/TMDB API를 이용해 유튜브, 이미지, 영화 검색 기능을 구현한 사이트입니다." />
     <meta name="keyword" content="React, Youtube.api, Unsplash.api, TMDB.api" />
     <title>API-Site-React 💎</title>
